--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -48,7 +48,7 @@ jobs:
         run: npm install && npm run build
 
       - name: Build site
-        run: bundle exec jekyll b --trace -d "_site${{ steps.pages.outputs.base_path }}"
+        run: bundle exec jekyll b -d "_site --trace ${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: "production"
 
