--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ include:
  - _javascript
 
 # Import the theme
-theme: jekyll-theme-chirpy
+#theme: jekyll-theme-chirpy
+remote_theme: cotes2020/jekyll-theme-chirpy
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -153,7 +154,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/Zihyeoni.github.io"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
