--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,9 @@
 include:
  - _javascript
 
+plugins:
+  - jekyll-include-cache
+
 # Import the theme
 #theme: jekyll-theme-chirpy
 remote_theme: cotes2020/jekyll-theme-chirpy
