--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ include:
 plugins:
   - jekyll-include-cache
   - jekyll-seo-tag
+  - jekyll-archives
 
 # Import the theme
 #theme: jekyll-theme-chirpy
