--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ theme_mode: # [light | dark]
 cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "https://search.pstatic.net/common/?src=http%3A%2F%2Fcafefiles.naver.net%2FMjAxOTAzMDlfMTM4%2FMDAxNTUyMTIwNjA1ODgw.Bh8Ket4M5CAJMbG3SswDUJywvxaNIPYhHhyu_WubexYg.UJuNMxVe63-Z9ofhTCa0C4MUu5BwsUtR7FFjJKEAFcgg.PNG.eunjung0481%2F%25C1%25A6%25B8%25F1_%25BE%25F8%25C0%25BD-1.png&type=sc960_832"
+avatar: "https://github.com/user-attachments/assets/b6c068e5-5baa-4a72-9a5e-ec03963801e1"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
