--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ title: Z._.LOG # the main title
 tagline: Growth Marketing 공부 기록 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  ZI's 공부 기록용 블로그
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
